<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.baiyi.cratos</groupId>
        <artifactId>cratos</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>cratos-eds-aliyun</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>

        <!-- https://mvnrepository.com/artifact/com.aliyun/cas20200407 -->
        <dependency>
            <groupId>com.aliyun</groupId>
            <artifactId>cas20200407</artifactId>
            <version>1.3.0</version>
        </dependency>

        <!--        ALIYUN SDK-->
        <!--        阿里云开发工具包（SDK）-->
        <!--        https://developer.aliyun.com/tools/sdk?spm=a2c4g.11186623.2.7.f0a34475oKJuPs#/java -->
        <!--        https://mvnrepository.com/artifact/com.aliyun/aliyun-java-sdk-core -->
        <dependency>
            <groupId>com.aliyun</groupId>
            <artifactId>aliyun-java-sdk-core</artifactId>
            <version>4.6.3</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.aliyun/tea-openapi
        -->
        <dependency>
            <groupId>com.aliyun</groupId>
            <artifactId>tea-openapi</artifactId>
            <version>0.3.2</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.aliyun/credentials-java
        -->
        <dependency>
            <groupId>com.aliyun</groupId>
            <artifactId>credentials-java</artifactId>
            <version>0.3.0</version>
        </dependency>

        <!-- https://next.api.aliyun.com/api-tools/sdk/Alb?version=2020-06-16&language=java-tea&tab=primer-doc
        -->
        <dependency>
            <groupId>com.aliyun</groupId>
            <artifactId>alb20200616</artifactId>
            <version>1.1.4</version>
        </dependency>

        <!-- https://api.aliyun.com/api-tools/sdk/Domain?version=2018-01-29&language=java-async-tea&tab=primer-doc
        -->
        <dependency>
            <groupId>com.aliyun</groupId>
            <artifactId>alibabacloud-domain20180129</artifactId>
            <version>1.0.5</version>
        </dependency>

        <dependency>
            <groupId>com.aliyun</groupId>
            <artifactId>aliyun-java-sdk-ram</artifactId>
            <version>3.3.1</version>
        </dependency>

        <dependency>
            <groupId>com.aliyun</groupId>
            <artifactId>aliyun-java-sdk-ecs</artifactId>
            <version>4.24.59</version>
        </dependency>

        <dependency>
            <groupId>com.baiyi.cratos</groupId>
            <artifactId>cratos-eds-core</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

    </dependencies>

</project>